--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "ngx-owl-carousel-2": "^6.0.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "video.js": "^7.19.2",
+    "videojs-youtube": "^2.6.1",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -28,6 +32,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/video.js": "^7.3.40",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
